Prepare for cloud deployment (Railway + Vercel)
- Make KafkaTemplate optional so app starts without Kafka
- Read server port from PORT env var (Railway requirement)
- Read CORS origins from CORS_ORIGINS env var
- Read API base URL from VITE_API_URL in frontend

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>